# citation-verifier

./: .gitignore  Dockerfile  LICENSE  LICENSE.md  README.md  check_config.py  main.py  next.config.js  package-lock.json  package.json  pyproject.toml  render-build.sh  requirements.in  requirements.txt  tsconfig.json
addons/word-taskpane/: .env.local  README.md  manifest.dev.xml  package-lock.json  package.json  tsconfig.json  vite.config.ts
addons/word-taskpane/src/: index.html  taskpane.ts
app/: globals.css  layout.tsx  page.module.css  page.tsx  pipeline.py  providers.tsx  robots.ts  sitemap.ts
app/api/verify/: route.ts
app/payments/cancelled/: page.tsx
app/payments/success/: page.tsx
app/results/: page.module.css  page.tsx
app/terms-of-use/: page.module.css  page.tsx
database/: __init__.py  crud.py  initialize.py  models.py  session.py
resources/: court_map.json  reporter_map.json
svc/: citations_compiler.py  doc_processor.py  extractor.py  pipeline.py  secondary_citation_handler.py  string_citation_handler.py
types/: mammoth.d.ts
utils/: auth.py  cleaner.py  logger.py  payments.py  resource_resolver.py  span_finder.py
verifiers/: case_verifier.py  federal_law_verifier.py  journal_verifier.py  secondary_sources_verifier.py  state_law_verifier.py
